# procrastinate

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  imgui.ini
.github/workflows/: build.yml  release-build.yml
engine/: CMakeLists.txt
engine/assets/: concrete_cat_statue_1k.mtl
engine/assets/shaders/: debug_line.frag.slang  debug_line.vert.slang  shading.comp.slang  shared.slangh  test.comp.slang  test.frag  test.frag.slang  test.vert  test.vert.slang  zero.comp.slang
engine/src/core/: engine.cpp  engine.hpp  engine.inl  events.cpp  events.hpp  imgui.cpp  imgui.hpp  window.cpp  window.hpp
engine/src/ecs/: scene.cpp  scene.hpp
engine/src/ecs/components/: camera_component.hpp  mesh_component.hpp  transform_component.hpp
engine/src/files/: files.hpp
engine/src/input/: input.cpp  input.hpp  input_enums.hpp
engine/src/render/: descriptor.hpp  vk_allocator.hpp  vk_barriers.cpp  vk_barriers.hpp  vk_buffer.cpp  vk_buffer.hpp  vk_command_pool.cpp  vk_command_pool.hpp  vk_descriptor.cpp  vk_descriptor.hpp  vk_device.cpp  vk_device.hpp  vk_frame.cpp  vk_frame.hpp  vk_image.cpp  vk_image.hpp  vk_instance.cpp  vk_instance.hpp  vk_logical_device.cpp  vk_logical_device.hpp  vk_physical_device.cpp  vk_physical_device.hpp  vk_pipeline.cpp  vk_pipeline.hpp  vk_renderer.cpp  vk_renderer.hpp  vk_shader.cpp  vk_shader.hpp  vk_surface.cpp  vk_surface.hpp  vk_swap_chain.cpp  vk_swap_chain.hpp
engine/src/resource/: resource.hpp  resource_callback.hpp  resource_manager.hpp  resource_pool.hpp
engine/src/resource/types/: mesh_resource.cpp  mesh_resource.hpp  shader_resource.hpp
engine/src/util/: data.hpp  frustum.hpp  print.hpp  util.hpp  vk_check.hpp  vk_transient_cmd.hpp
runtime/: CMakeLists.txt
runtime/src/: main.cpp
